Align the form correctly and fix nav bar to top

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -98,9 +98,11 @@
 
 .mobile-nav {
   position: fixed;
+  top: 0;
   width: 100%;
   height: 80px;
   border-bottom: 2px solid #c4c4c4;
+  background-color: #fff;
 }
 
 .mobile-nav-items-container {
@@ -149,6 +151,7 @@
   height: 250px;
   border-radius: 0 0 50px 50px;
   border: 2px solid #c4c4c4;
+  background-color: #fff;
   transition: margin-top 0.5s;
   margin-top: -300px;
 }
@@ -169,6 +172,7 @@
   display: flex;
   flex-direction: column;
   margin: auto;
+  margin-top: 70px;
   max-width: 1000px;
 }
 
